Fixed defect and some spacing issues
Fixed a major bug that broke the whole web application.
long tasks don't overlap with date and time anymore.

--- a/src/app/components/tasks/task-functions/task-functions.component.css
+++ b/src/app/components/tasks/task-functions/task-functions.component.css
@@ -1,4 +1,4 @@
-#icon:hover {
+.psuedo:hover {
   cursor:pointer;
 }
 
